objects/Sensitive_Information__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Token__c</fullName>
        <label>API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Name__c</fullName>
        <label>Version Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Sensitive Information</label>
</CustomObject>